fixed alignment of event icons

--- a/event-app/src/Components/EventItem.css
+++ b/event-app/src/Components/EventItem.css
@@ -53,7 +53,7 @@
   margin: 3px 0 0;
 }
 .bottomIcon {
-  margin: 0;
+  margin: 0 0 1px;
   font-size: 14px;
 }
 .bottomLabel {
